Fixed spacing below featured projects

--- a/www/wp-content/themes/romaricpascal.is/scss/_projects.scss
+++ b/www/wp-content/themes/romaricpascal.is/scss/_projects.scss
@@ -1,6 +1,7 @@
 
 .rp-FeaturedProjects {
   display: flex;
+  padding-bottom: 2em;
 }
 
 .rp-FeaturedProjects__card {
